MAR-1940 Added WhyCityCam section with tests

--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -85,10 +85,13 @@ $backgroundColors: (
   'blue-light': #effaff,
   'blue-itc': #4154b3,
   'blue-itc-darken': #132E50,
+  'blue-citycam':#3A52D4,
+  'blue-citycam-dark':#23338B,
   'gray': #404143,
   'gray-light':#FBFBFB,
   'gray-darken': #eaeaea,
   'yellow': #ffd31b,
+  'yellow-dark':#FEC21F,
 );
 
 // loop, to style Legends
