--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -84,15 +84,15 @@ $backgroundColors: (
   'blue': #137bce,
   'blue-light': #effaff,
   'blue-itc': #4154b3,
-  'blue-itc-darken': #132E50,
-  'blue-citycam':#3A52D4,
-  'blue-citycam-dark':#23338B,
-  'silver-citycam':#F3F3F3,
+  'blue-itc-darken': #132e50,
+  'blue-darkened':#3a52d4,
+  'blue-dark':#23338b,
+  'gray-lightened':#f3f3f3,
   'gray': #404143,
-  'gray-light':#FBFBFB,
+  'gray-light':#fbfbfb,
   'gray-darken': #eaeaea,
   'yellow': #ffd31b,
-  'yellow-dark':#FEC21F,
+  'yellow-dark':#fec21f,
 );
 
 // loop, to style Legends
