MAR-1940 Added power supply section combined with board tracing and its test. In shared created ListNumbered and Item and its tests

--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -30,6 +30,7 @@ $spaces: (
   '32': 32px,
   '34': 34px,
   '38': 38px,
+  '42': 42px,
   '48': 48px,
   '56': 56px,
   '60': 60px,
@@ -76,6 +77,7 @@ $backgroundColors: (
   'orange': #ff6900,
   'purple-light': #8C7BAD,
   'purple-primary': #675290,
+  'purple-blue':#dbe5fa,
   'purple-medium': #2D1956,
   'purple-dark': #180839,
   'purple-itc': #293470,
