MAR-2030. Redesigned the Customer University sections

--- a/client/assets/styles/_vars.scss
+++ b/client/assets/styles/_vars.scss
@@ -47,6 +47,7 @@ $text-color--grey: #96969c;
 $text-color--grey-light: #f2f2f2;
 $text-color--grey-opacity-20-percent: #cfcfd0;
 $text-color--grey-pale: #707072;
+$text-color--grey-matterhorn:#4B4B4B;
 $text-color--red: #ec1c24;
 $text-color--red-dark: #DC251C;
 $text-color--yellow: #F7C744;
