MAR-2493 added team, stack and MobileApplications sections

--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -95,6 +95,7 @@ $backgroundColors: (
   'blue-dark':#23338b,
   'blue-grey':#08537e,
   'blue-white': #e5ebee,
+  'sky-blue':#00aeef,
   'gray-lightened':#f3f3f3,
   'gray': #404143,
   'gray-light':#fbfbfb,
