MAR-2283. Added the recaptcha to the PositionForm && updated tests

--- a/client/assets/styles/_global.scss
+++ b/client/assets/styles/_global.scss
@@ -63,6 +63,11 @@
   }
 }
 
+// gRecaptcha style
+.grecaptcha-badge {
+  visibility: hidden !important;
+}
+
 .title-md {
   @include font('Poppins', 40px, 700);
   letter-spacing: -1px;
