MAR-2548. add "sticky" style to form on ebook page

--- a/client/assets/styles/_base.scss
+++ b/client/assets/styles/_base.scss
@@ -36,6 +36,9 @@ main {
   position: relative;
   overflow: hidden;
   z-index: 1;
+  &.ebook-page{
+    overflow: initial;  // for correct working "sticky position" property
+  }
 }
 
 * {
