MAR-66. Added "Project issues and how we resolved them" block to Guardrails page

--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -79,6 +79,7 @@ $backgroundColors: (
   'silver': #f4f4f4,
   'berry': #f55876,
   'orange': #ff6900,
+  'orange-dark': #FF5A00,
   'purple-light': #8C7BAD,
   'purple-primary': #675290,
   'purple-blue':#dbe5fa,
@@ -103,7 +104,7 @@ $backgroundColors: (
   'yellow': #ffd31b,
   'yellow-dark':#fec21f,
   'white':rgba(255, 255, 255, 0.2),
-
+  'outer-space': #323A45,
 );
 
 // loop, to style Legends
