--- a/client/assets/styles/_vars.scss
+++ b/client/assets/styles/_vars.scss
@@ -34,6 +34,9 @@ $bgcolor--sound-control: rgba(64, 65, 67, 0.5);
 $bgcolor--header-gradient: linear-gradient(180deg, #000000 0%, rgba(0, 0, 0, 0.991353) 6.67%, rgba(0, 0, 0, 0.96449) 13.33%, rgba(0, 0, 0, 0.91834) 20%, rgba(0, 0, 0, 0.852589) 26.67%, rgba(0, 0, 0, 0.768225) 33.33%, rgba(0, 0, 0, 0.668116) 40%, rgba(0, 0, 0, 0.557309) 46.67%, rgba(0, 0, 0, 0.442691) 53.33%, rgba(0, 0, 0, 0.331884) 60%, rgba(0, 0, 0, 0.231775) 66.67%, rgba(0, 0, 0, 0.147411) 73.33%, rgba(0, 0, 0, 0.0816599) 80%, rgba(0, 0, 0, 0.03551) 86.67%, rgba(0, 0, 0, 0.0086472) 93.33%, rgba(0, 0, 0, 0) 100%);
 $bgcolor--blue: #137bce;
 $bgcolor--blue-veeqo: #268bdc;
+$bgcolor--dark-purple06-opacity: rgba(45, 25, 86, 0.6);
+$bgcolor--dark-purple05-opacity: rgba(45, 25, 86, 0.5);
+$bgcolor--dark-purple04-opacity: rgba(45, 25, 86, 0.4);
 
 // ---------- Text ------------ //
 $text-color--white: #f5f7f9;
