--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -69,6 +69,23 @@ $spacesMedia: (
   '72': 72px
 );
 
+$textColors: (
+  'silver': #f4f4f4,
+  'berry': #f55876,
+  'orange': #ff6900,
+  'orange-dark': #FF5A00,
+  'purple-light': #8C7BAD,
+  'purple-primary': #675290,
+  'purple-blue':#dbe5fa,
+  'purple-medium': #2D1956,
+  'purple-dark': #180839,
+  'purple-itc': #293470,
+  'pink': #dd0957,
+  'godee-black-card': rgba(64, 65, 67, 0.3),
+  'blue': #137bce,
+  'yellow': #ffd31b,
+); // todo change this colors MAR-2889
+
 $backgroundColors: (
   'red': #ee6664,
   'black': #111213,
@@ -158,6 +175,14 @@ $backgroundColors: (
     .media-background-color-#{$name} {
       background-color: $variable;
     }
+  }
+}
+
+// loop, to style cards
+@each $name, $variable in $textColors {
+  // selector based on class name
+  .text-color-#{$name} {
+    color: $variable !important;
   }
 }
 
