MAR-2870-component-card-refactoring. Added white color to text colors in _grid.scss

--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -84,6 +84,8 @@ $textColors: (
   'godee-black-card': rgba(64, 65, 67, 0.3),
   'blue': #137bce,
   'yellow': #ffd31b,
+  'white': #ffffff,
+
 ); // todo change this colors MAR-2889
 
 $backgroundColors: (
