MAR-2870. Veeqo - Replaced old cards to new colored cards component.

--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -85,6 +85,7 @@ $textColors: (
   'blue': #137bce,
   'yellow': #ffd31b,
   'white': #ffffff,
+  'quick-silver': #a0a0a1,
 
 ); // todo change this colors MAR-2889
 
