MAR-2870-component-card-refactoring. BusinessModel components has been replaced

--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -86,6 +86,7 @@ $textColors: (
   'yellow': #ffd31b,
   'white': #ffffff,
   'quick-silver': #a0a0a1,
+  'turquoise': #46A393
 
 ); // todo change this colors MAR-2889
 
