MAR-2835. Removed unused colors from _grid.scss

--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -72,23 +72,12 @@ $spacesMedia: (
 $textColors: (
   'silver': #f4f4f4,
   'berry': #f55876,
-  'orange': #ff6900,
   'orange-dark': #FF5A00,
-  'purple-light': #8C7BAD,
-  'purple-primary': #675290,
-  'purple-blue':#dbe5fa,
-  'purple-medium': #2D1956,
-  'purple-dark': #180839,
-  'purple-itc': #293470,
-  'pink': #dd0957,
-  'godee-black-card': rgba(64, 65, 67, 0.3),
-  'blue': #137bce,
   'yellow': #ffd31b,
   'white': #ffffff,
   'quick-silver': #a0a0a1,
   'turquoise': #46A393
-
-); // todo change this colors MAR-2889
+);
 
 $backgroundColors: (
   'red': #ee6664,
