MAR-2913. Color have been entered into vars

--- a/client/assets/styles/_vars.scss
+++ b/client/assets/styles/_vars.scss
@@ -50,6 +50,7 @@ $bgcolor--dark-purple05-opacity: rgba(45, 25, 86, 0.5);
 $bgcolor--dark-purple04-opacity: rgba(45, 25, 86, 0.4);
 
 // ---------- Text ------------ //
+$text-color--dark-gray: #aaaaaa;
 $text-color--grey-20-percent: #cfcfd0;
 $text-color--ruddy: #ff0029;
 $text-color--chinese-black: #111111;
