MAR-2815. Added breadcrumbs and created tests

--- a/client/assets/styles/_vars.scss
+++ b/client/assets/styles/_vars.scss
@@ -41,6 +41,7 @@ $bgcolor--dark-purple04-opacity: rgba(45, 25, 86, 0.4);
 // ---------- Text ------------ //
 $text-color--white: #f5f7f9;
 $text-color--white-primary: #ffffff;
+$text-color--gainsboro: #dddddd;
 $text-color--white-darken: #fcfcfd;
 $text-color--white-transparent: rgba(255, 255, 255, 0.7);
 $text-color--black: #000;
