MAR-1259. Created colored cards. Expanded component ColoredCard for picture right. Added colors.

--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -116,6 +116,12 @@ $backgroundColors: (
   'yellow-dark':#fec21f,
   'white':rgba(255, 255, 255, 0.2),
   'outer-space': #323A45,
+  'prussian-blue': #073B4C,
+  'midnight-blue': #003f88,
+  'heat-wave': #ff7b00,
+  'rich-black': #000814,
+  'selective-yellow': #ffb700,
+  'maastricht-blue': #001D3D,
 );
 
 // loop, to style Legends
