MAR-2704. Created chat modal

--- a/client/assets/styles/_vars.scss
+++ b/client/assets/styles/_vars.scss
@@ -1,5 +1,8 @@
 // ---------- Background  ------------ //
 $bgcolor--eerie-black: #191A1B;
+$bgcolor--grey-selected: #707072;
+$bgcolor--chinese-black: #111111;
+$bgcolor--venetian-red: #ec1c24;
 $bgcolor--quote-box: #404143;
 $bgcolor--black-primary: #000000;
 $bgcolor--apple: #62ba56;
