--- a/client/assets/styles/_vars.scss
+++ b/client/assets/styles/_vars.scss
@@ -1,4 +1,7 @@
 // ---------- Background  ------------ //
+$bgcolor--chinese-white: #e0e0e0;
+$bgcolor--venetian-red: #EC1C24;
+$bgcolor--philippine-gray: #8A8A8A;
 $bgcolor--eerie-black: #191A1B;
 $bgcolor--grey-selected: #707072;
 $bgcolor--chinese-black: #111111;
@@ -53,6 +56,7 @@ $bgcolor--dark-purple05-opacity: rgba(45, 25, 86, 0.5);
 $bgcolor--dark-purple04-opacity: rgba(45, 25, 86, 0.4);
 
 // ---------- Text ------------ //
+$text-color--philippine-gray: #8A8A8A;
 $text-color--venetian-red: #EC1C24;
 $text-color--dark-gray: #aaaaaa;
 $text-color--grey-20-percent: #cfcfd0;
@@ -97,6 +101,7 @@ $text-stroke--white: 1.5px #f2f2f2;
 $text-stroke--red: 1.5px #ec1c24;
 
 // ---------- Border ------------ //
+$border-color--venetian-red: #EC1C24;
 $border-color--grey: #96969c;
 $border-color--grey-pale: #404143;
 $border-color--grey-selected: #707072;
