--- a/client/assets/styles/_vars.scss
+++ b/client/assets/styles/_vars.scss
@@ -128,6 +128,7 @@ $border-color--white-03-opacity: rgba(255, 255, 255, 0.3);
 $border-color--grey-input: #404143;
 $border-color--black-border-03-opacity: rgba(16, 17, 19, 0.3);
 $border-color--black-border-05-opacity: rgba(16, 17, 19, 0.5);
+$border-color--platinum: #E5E5E5;
 
 // ---------- Border radius ------------ //
 $form-border-radius: 7px;
