MAR-2919. Fix colors

--- a/client/assets/styles/_vars.scss
+++ b/client/assets/styles/_vars.scss
@@ -114,6 +114,7 @@ $border-color--grey-20-percent: #cfcfd0;
 $border-color--silver: #f4f4f4;
 $border-color--grey-01-opacity: rgba(160, 160, 161, 0.1);
 $border-color--grey-02-opacity: rgba(160, 160, 161, 0.2);
+$border-color--grey-05-opacity: rgba(164, 168, 180, 0.5);
 $border-color--white-02-opacity: rgba(255, 255, 255, 0.2);
 $border-color--white-002-opacity: rgba(255, 255, 255, 0.02);
 $border-color--white-03-opacity: rgba(255, 255, 255, 0.3);
