--- a/client/assets/styles/_base.scss
+++ b/client/assets/styles/_base.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap&family=Inter:wght@300;400;600;700;800&display=swap&family=Poppins:wght@600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap&family=Inter:wght@300;400;600;700;800&display=swap&family=Poppins:wght@300;500;600;700&display=swap');
 
 body {
   margin: 0;
