MAR-3234. Deleted lazy-load and changed data-src to src, updated snapshots

--- a/client/assets/styles/_vars.scss
+++ b/client/assets/styles/_vars.scss
@@ -1,4 +1,5 @@
 // ---------- Background  ------------ //
+$bgcolor--cultured: #F5F7F9;
 $bgcolor--chinese-white: #e0e0e0;
 $bgcolor--venetian-red: #EC1C24;
 $bgcolor--philippine-gray: #8A8A8A;
