--- a/client/assets/styles/_base.scss
+++ b/client/assets/styles/_base.scss
@@ -11,6 +11,10 @@ body {
   overflow-y: overlay; // removes the black line near scrollbar when Chrome browser is scaled > 100%
 }
 
+figure {
+  margin: 0;
+}
+
 h1,
 h2,
 h3,
