--- a/client/assets/styles/_global.scss
+++ b/client/assets/styles/_global.scss
@@ -162,7 +162,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 8px;
-  margin-bottom: 30px;
+  margin-bottom: 15px !important;
 }
 
 .form-checkbox-label {
