--- a/client/assets/styles/_global.scss
+++ b/client/assets/styles/_global.scss
@@ -510,7 +510,9 @@
 
   &:hover {
     .anchor_copy-link button {
-      display: block;
+      @media screen and (min-width: 768px) {
+        display: block;
+      }
     }
   }
 }
