MAR-2368. Created Banner and About blocks.

--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -122,6 +122,7 @@ $backgroundColors: (
   'rich-black': #000814,
   'selective-yellow': #ffb700,
   'maastricht-blue': #001D3D,
+  'button-blue': #1DA5FC,
 );
 
 // loop, to style Legends
