--- a/client/assets/styles/_vars.scss
+++ b/client/assets/styles/_vars.scss
@@ -55,6 +55,7 @@ $bgcolor--blue-veeqo: #268bdc;
 $bgcolor--dark-purple06-opacity: rgba(45, 25, 86, 0.6);
 $bgcolor--dark-purple05-opacity: rgba(45, 25, 86, 0.5);
 $bgcolor--dark-purple04-opacity: rgba(45, 25, 86, 0.4);
+$bgcolor--button-blue: #1DA5FC;
 
 // ---------- Text ------------ //
 $text-color--philippine-gray: #8A8A8A;
