--- a/client/assets/styles/cases/_grid.scss
+++ b/client/assets/styles/cases/_grid.scss
@@ -67,7 +67,8 @@ $spacesMedia: (
   '48': 48px,
   '65': 65px,
   '68': 68px,
-  '72': 72px
+  '72': 72px,
+  '62': 62px,
 );
 
 $textColors: (
@@ -123,6 +124,13 @@ $backgroundColors: (
   'selective-yellow': #ffb700,
   'maastricht-blue': #001D3D,
   'button-blue': #1DA5FC,
+  'medium-turquoise': #3ACBD9,
+  'blue-sky': #26BBEE,
+  'scooter': #2EC7D6,
+  'picton-blue': #34C8E8,
+  'picton-blue-darker': #42B4F6,
+  'butterfly-blue': #3AADF0,
+  'ball-blue': #1DA5FC,
 );
 
 // loop, to style Legends
